--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -15,22 +15,24 @@ jobs:
       uses: actions/checkout@v2
 
     # Set up Node.js (for Firebase CLI)
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
+    - name: Set up Node.js 18.x
+      uses: actions/setup-node@v3
       with:
-        node-version: '16'  # Specify the Node.js version you want to use
+        node-version: '18.x'  # Specify the Node.js version you want to use
 
-    # Install dependencies
+    # Install dependencies inside the frontend-react folder
     - name: Install dependencies
       run: |
         npm install -g firebase-tools
         npm install
+      working-directory: frontend-react  # Ensure the command runs in the frontend-react directory
 
     # Firebase authentication (using GitHub Secrets)
     - name: Authenticate Firebase
       run: firebase login:ci --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
+      working-directory: frontend-react  # Ensure the command runs in the frontend-react directory
 
     # Deploy to Firebase
     - name: Deploy to Firebase
       run: firebase deploy --only hosting --project ${{ secrets.FIREBASE_PROJECT_ID }}
-
+      working-directory: frontend-react  # Ensure the command runs in the frontend-react directory
