--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
     # Firebase authentication (using GitHub Secrets)
     - name: Authenticate Firebase
-      run: firebase login:ci --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
+      run: firebase use --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
       working-directory: frontend-react  # Ensure the command runs in the frontend-react directory
 
     # Deploy to Firebase
