--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -27,12 +27,12 @@ jobs:
         npm install
       working-directory: frontend-react  # Ensure the command runs in the frontend-react directory
 
-    # Firebase authentication (using GitHub Secrets)
-    - name: Authenticate Firebase
-      run: firebase login:ci --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
-      working-directory: frontend-react  # Ensure the command runs in the frontend-react directory
+    # # Firebase authentication (using GitHub Secrets)
+    # - name: Authenticate Firebase
+    #   run: firebase login:ci --token ${{ secrets.FIREBASE_AUTH_TOKEN }}
+    #   working-directory: frontend-react  # Ensure the command runs in the frontend-react directory
 
     # Deploy to Firebase
     - name: Deploy to Firebase
-      run: firebase deploy --only hosting --project ${{ secrets.FIREBASE_PROJECT_ID }}
+      run: firebase deploy --only hosting --project ${{ secrets.FIREBASE_AUTH_TOKEN }}
       working-directory: frontend-react  # Ensure the command runs in the frontend-react directory
