--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -31,7 +31,7 @@ jobs:
     # Build the React app
     - name: Build React app
       run: npm run build
-      working-direactory: frontend-react
+      working-directory: frontend-react
 
 
     # Set up Google Cloud credentials
